docs: Update test execution instructions to include Java 24 specifics and remove TDD philosophy.